--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
  	<h1>PatrickBoard</h1>
 	<div class="row">
 		<div class="col"><button onclick="playSound('sounds/patrick_no.m4a')">No</button></div>	
-		<div class="col">2</div>
-		<div class="col">c3ol</div>
+		<div class="col"><button onclick="playSound('sounds/uh_02.mp3')">Uh 01</button></div>
+		<div class="col"><button onclick="playSound('sounds/um_01.mp3')">Um 01</button></div>
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
