--- a/index.html
+++ b/index.html
@@ -7,55 +7,28 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<style type="text/css">
-		body {
-			background-color: rgba(240, 240, 240, 1);
-			margin: 20px;
-			padding: 0;
-			font-family: sans-serif;
-			font-size: 12px;
-		}
-		p {
-			margin-bottom: 10px;
-		}
-
-		button {
-			color: white;
-			font-weight: bold;
-			font-family: "Helvetica", sans-serif;
-			padding: 20px	;
-			width: 100%;
-			height: 100px;
-			background-color: rgba(50, 50, 50, 0.8);
-			border: 1px solid black;
-			border-radius: 2px;
-		}
-
-		h1 {
-			text-align: center;
-		}
-
-		button:hover {
-			background-color: rgba(80, 80, 80, 0.8);
-		}
-
-		button:active {
-			color: rgba(30, 30, 30, 1);
-			background-color: rgba(200, 200, 200, 0.8);
-		}
-	</style>
- 
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
  
 <body>
-	<!-- <audio id="no" src="sounds/patrick_no.m4a"></audio> -->
-	<!-- <audio id="sound2" src="sound2.mp3"></audio> -->
- 
  	<h1>PatrickBoard</h1>
 	<div class="row">
 		<div class="col"><button onclick="playSound('sounds/patrick_no.m4a')">No</button></div>	
-		<div class="col"><button onclick="playSound('sounds/uh_02.mp3')">Uh 01</button></div>
-		<div class="col"><button onclick="playSound('sounds/um_01.mp3')">Um 01</button></div>
+		<div class="col"><button onclick="playSound('sounds/uh_02.mp3')">Uh 1</button></div>
+		<div class="col"><button onclick="playSound('sounds/um_01.mp3')">Um 1</button></div>
+		<div class="col"><button onclick="playSound('sounds/um_02.mp3')">Um 2</button></div>
+	</div>
+	<div class="row">
+		<div class="col"><button onclick="playSound('sounds/as_heard_in_class.mp3')">As heard in class</button></div>	
+		<div class="col"><button onclick="playSound('sounds/uh_01.mp3')">Uh 2</button></div>
+		<div class="col"><button onclick="playSound('sounds/ok_so.mp3')">Ok so</button></div>
+		<div class="col"><button onclick="playSound('sounds/wow.mp3')">Wow</button></div>
+	</div>
+	<div class="row">
+		<div class="col"><button onclick="playSound('sounds/my_name_is.mp3')">Hi my name is patrick</button></div>	
+<!-- 		<div class="col"><button onclick="playSound('sounds/uh_01.mp3')">Uh 2</button></div>
+		<div class="col"><button onclick="playSound('sounds/ok_so.mp3')">Ok so</button></div>
+		<div class="col"><button onclick="playSound('sounds/wow.mp3')">Wow</button></div> -->
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
