--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
 	</div>
 	<div class="row">
 		<div class="col"><button onclick="playSound('sounds/my_name_is.mp3')">Hi my name is patrick</button></div>	
-<!-- 		<div class="col"><button onclick="playSound('sounds/uh_01.mp3')">Uh 2</button></div>
-		<div class="col"><button onclick="playSound('sounds/ok_so.mp3')">Ok so</button></div>
-		<div class="col"><button onclick="playSound('sounds/wow.mp3')">Wow</button></div> -->
+		<div class="col"><button onclick="playSound('sounds/ar_u_series.mp3')">Are you serious</button></div>
+		<div class="col"><button onclick="playSound('sounds/mildly_entertaining.mp3')">Mildly entertaining</button></div> -->
+	</div>
+	<div class="row">
+		<div class="col"><button onclick="playSound('sounds/sigh_01.mp3')">Sigh 1</button></div>	
+		<div class="col"><button onclick="playSound('sounds/sigh_02.mp3')">Sigh 2</button></div>
+		<div class="col"><button onclick="playSound('sounds/whitebread.mp3')">White bread</button></div> -->
+	</div>
+	<div class="row">
+		<div class="col"><button onclick="playSound('sounds/creepy.mp3')">Patrick's reaction to this</button></div>	
+		<!-- <div class="col"><button onclick="playSound('sounds/sigh_02.mp3')">Sigh 2</button></div> -->
+		<!-- <div class="col"><button onclick="playSound('sounds/whitebread.mp3')">White bread</button></div> --> -->
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
