--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
 		<div class="col"><button onclick="playSound('sounds/sigh_02.mp3')">Sigh 2</button></div>
 		<div class="col"><button onclick="playSound('sounds/whitebread.mp3')">White bread</button></div>
 		<div class="col"><button onclick="playSound('sounds/creepy.mp3')">Patrick's reaction to this</button></div>	
-		<div class="col"><button onclick="playSound('sounds/and.mp3')">And</button></div>	
+		<div class="col"><button onclick="playSound('sounds/new/and.mp3')">And</button></div>	
 	</div>
 	<div class="row">
-		<div class="col"><button onclick="playSound('sounds/dont_worry.mp3')">Don't worry about it</button></div>
-		<div class="col"><button onclick="playSound('sounds/georgia_tech.mp3')">Georgia Tech</button></div>
-		<div class="col"><button onclick="playSound('sounds/impatrick.mp3')">I'm Patrick</button></div>	
-		<div class="col"><button onclick="playSound('sounds/now.mp3')">Now</button></div>	
+		<div class="col"><button onclick="playSound('sounds/new/dont_worry.mp3')">Don't worry about it</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/georgia_tech.mp3')">Georgia Tech</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/impatrick.mp3')">I'm Patrick</button></div>	
+		<div class="col"><button onclick="playSound('sounds/new/now.mp3')">Now</button></div>	
 	</div>
 	<div class="row">
-		<div class="col"><button onclick="playSound('sounds/patrick.mp3')">Patrick</button></div>
-		<div class="col"><button onclick="playSound('sounds/so.mp3')">So 1</button></div>
-		<div class="col"><button onclick="playSound('sounds/so2.mp3')">So 2</button></div>	
-		<div class="col"><button onclick="playSound('sounds/started.mp3')">Let's get started</button></div>	
+		<div class="col"><button onclick="playSound('sounds/new/patrick.mp3')">Patrick</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/so.mp3')">So 1</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/so2.mp3')">So 2</button></div>	
+		<div class="col"><button onclick="playSound('sounds/new/started.mp3')">Let's get started</button></div>	
 	</div>
 	<div class="row">
-		<div class="col"><button onclick="playSound('sounds/uh.mp3')">Uh 3</button></div>
-		<div class="col"><button onclick="playSound('sounds/uh2.mp3')">Uh 4</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/uh.mp3')">Uh 3</button></div>
+		<div class="col"><button onclick="playSound('sounds/new/uh2.mp3')">Uh 4</button></div>
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
