--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<div class="col"><button onclick="playSound('sounds/new/uh.mp3')">Uh 3</button></div>
 		<div class="col"><button onclick="playSound('sounds/new/uh2.mp3')">Uh 4</button></div>
 		<div class="col"><button onclick="playSound('sounds/fuck_is_this.wav')">The fuck is this</button></div>
+		<div class="col"><button onclick="playSound('sounds/thanks_leonard.wav')">Thanks Leonard</button></div>
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
