--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 		<div class="col"><button onclick="playSound('sounds/fuck_is_this.wav')">The fuck is this</button></div>
 		<div class="col"><button onclick="playSound('sounds/thanks_leonard.wav')">Thanks Leonard</button></div>
 	</div>
+	<div class="row">
+		<div class="col"><button onclick="playSound('sounds/what.wav')">What</button></div>
+		<div class="col"><button onclick="playSound('sounds/aw_fuck_recording.wav')">Aw fuck, recording?/button></div>
+	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
 		let context = new AudioContext();
