--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div class="row">
 		<div class="col"><button onclick="playSound('sounds/what.wav')">What</button></div>
-		<div class="col"><button onclick="playSound('sounds/aw_fuck_recording.wav')">Aw fuck, recording?/button></div>
+		<div class="col"><button onclick="playSound('sounds/aw_fuck_recording.wav')">Aw fuck, recording?</button></div>
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
