--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 	<div class="row">
 		<div class="col"><button onclick="playSound('sounds/new/uh.mp3')">Uh 3</button></div>
 		<div class="col"><button onclick="playSound('sounds/new/uh2.mp3')">Uh 4</button></div>
-		<div class="col"><button onclick="playSound('sounds/fuck_is_this.wav')">The fuck is this</button></div>
-		<div class="col"><button onclick="playSound('sounds/thanks_leonard.wav')">Thanks Leonard</button></div>
+		<div class="col"><button onclick="playSound('sounds/fuck_is_this.mp3')">The fuck is this</button></div>
+		<div class="col"><button onclick="playSound('sounds/thanks_leonard.mp3')">Thanks Leonard</button></div>
 	</div>
 	<div class="row">
-		<div class="col"><button onclick="playSound('sounds/what.wav')">What</button></div>
-		<div class="col"><button onclick="playSound('sounds/aw_fuck_recording.wav')">Aw fuck, recording</button></div>
+		<div class="col"><button onclick="playSound('sounds/what.mp3')">What</button></div>
+		<div class="col"><button onclick="playSound('sounds/aw_fuck_recording.mp3')">Aw fuck, recording</button></div>
 	</div>
 	<script>
 		window.AudioContext = window.AudioContext || window.webkitAudioContext;
